Rename project from Scrcpy GUI to UI Pretrain Manager. Added macOS build script and installation guide. Updated localization files and adjusted device identification logic to use unique device IDs. Enhanced UI elements and documentation to reflect the new project name.

--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -4,7 +4,7 @@ AppDir:
   path: /home/pizi/Documents/Projects/scrcpygui/AppDir
   app_info:
     id: com.piji.scrcpygui
-    name: Scrcpy GUI
+    name: UI Pretrain Manager
     icon: application-vnd.appimage
     version: latest
     exec: scrcpygui
