--- a/linux/packaging/flatpak/io.github.pizi_0.flutter-scrcpygui.desktop
+++ b/linux/packaging/flatpak/io.github.pizi_0.flutter-scrcpygui.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 
-Name=Scrcpy GUI
+Name=UI Pretrain Manager
 Comment=A user friendly GUI for scrcpy
 Categories=Utility
 Keywords=scrcpy;android;mirroring;screencast
